#########################################################
#                Tcl/Tk Project Manager
#        Distributed under GNU Public License
# Copyright (c) "CONERO lab", 2001, http://conero.lrn.ru
# Author: Sergey Kalinin (aka BanZaj) banzaj@lrn.ru
#########################################################

0.4.5

11/01/2018
- Changes color setting dialog into "Setting"
- Actualizing information into "About" dialog 
- Corrected color settings for all widgets
- Change default color scheme
- Remove ctag, change autocomplitt procedure

0.4.4

19/10/2015
- Fixed install.tcl script


0.3.7

18/10/2007
-Added text encoding support from koi8-r,cpp1251,cp866 to UTF-8

20/02/2007
- Fixed settings dialog
- Fixed saved  settings parameter

27/01/2006

- Remove SuperText widget now use native TEXT

29/12/2005
- Added RUBY projects support
- Fixed remove project if some files is open in editor
- Add function for added interpritator into new like #!/usr/bin/wish

0.3.6

18/02/2005
- Fixed correctly file attributes in WIN OS as like a date and time

01/02/2005
- Added DOT-file support

07/12/2004
- Added PHP projects support

0.3.5

01/11/2004
- Added Rivet and TclHttpd template files support
- Removed BWidget documentation
- Fixed bug with One Click mouse button on folder in TreeWidget

25/10/2004
Fixed bug with PageRise function

27/09/2004
- Added "Create New Directory" dialog into main and pop-up menu

14/09/2004
- Added image viewer 
- Fixed close projman if was not opened projects

0.3.4
15/07/2004
- Fixed closes "About" window with popup menu

13/04/2004
- Added O'Caml (ML) support (not stable)
- Fixed settings dialog

0.3.3

04/12/2003
- Fix perl source code navigation ('sub' keyword)

22/09/2003
- Added fortran project support
- Added STDERR output in text widget when project or file compile (running)

10/07/2003
- Fix buf with runing TkCVS and other modules

07/07/2003
- Added PERL project support