@@ -7,6 +7,10 @@
 
 0.4.5
 
+22/01/2018
+- Remove ctags support
+- Added gitk (gui for git) support
+
 11/01/2018
 - Changes color setting dialog into "Setting"
 - Actualizing information into "About" dialog 
@@ -332,6 +336,7 @@ Fixed bug with PageRise function
         - Fix small error with delete project procedure
         - Fix uncorrect cursor position counter into editor
         
+
 
 
 
